# ground-test-for-landing

./: .gitignore  README.md  readme.txt  start_online.sh  stop_online.sh
PX4_Firmware/Tools/sitl_gazebo/worlds/: nagetive_terrain.world
PX4_Firmware/launch/: livox.launch  livox_custom.launch  posix_sitl.launch
costmap_ws/src/fast_lio_global_grid_map/: CMakeLists.txt
costmap_ws/src/fast_lio_global_grid_map/config/: global_grid_map.yaml  visualization.yaml
costmap_ws/src/grid_map/grid_map/: package.xml
costmap_ws/src/grid_map/grid_map_costmap_2d/: package.xml
costmap_ws/src/grid_map/grid_map_cv/: package.xml
costmap_ws/src/grid_map/grid_map_demos/: package.xml
costmap_ws/src/grid_map/grid_map_filters/: package.xml
costmap_ws/src/grid_map/grid_map_loader/: package.xml
costmap_ws/src/grid_map/grid_map_msgs/: package.xml
costmap_ws/src/grid_map/grid_map_octomap/: package.xml
costmap_ws/src/grid_map/grid_map_ros/: package.xml
costmap_ws/src/grid_map/grid_map_sdf/: package.xml
costmap_ws/src/safeland/config/: safeland.yaml  safeland_filters.yaml  safeland_visualization.yaml
costmap_ws/src/safeland/launch/: safeland.launch
costmap_ws/src/safeland/src/: safeland_node.cpp
docs/: TECHNICAL_SPECIFICATION.md  marsim_offline_integration.md  optimization_plan.md
iros_challenge/: start_offline.sh  start_online.sh
iros_challenge/src/FAST_LIO/config/: mid360.yaml
iros_challenge/src/mpc_control/launch/: control_sim_iros2025.launch
nagetive_terrain/: model.config  model.sdf
nagetive_terrain/meshes/: pitted_ground_15x15x2_36holes.dae
src/costmap_ws/src/fast_lio_global_grid_map/: package.xml
src/costmap_ws/src/fast_lio_global_grid_map/config/: global_grid_map.yaml  global_grid_map_complex_terrain.yaml
src/costmap_ws/src/fast_lio_global_grid_map/launch/: global_grid_map.launch
src/costmap_ws/src/fast_lio_global_grid_map/rviz/: global_grid_map.rviz
src/costmap_ws/src/fast_lio_global_grid_map/src/: global_grid_map_node.cpp
src/costmap_ws/src/safeland/: CMakeLists.txt  package.xml
src/costmap_ws/src/safeland/config/: marsim_mid360_template.yaml  safeland.yaml  safeland_complex_terrain.yaml  safeland_offline_scans.yaml  safeland_visualization.yaml
src/costmap_ws/src/safeland/launch/: marsim_safeland_offline.launch
src/costmap_ws/src/safeland/rviz/: safeland.rviz
src/costmap_ws/src/safeland/scripts/: collect_safeland_metrics.py
src/costmap_ws/src/safeland/src/: safeland_node.cpp
tools/marsim/: batch_eval_marsim_safeland.sh  batch_eval_marsim_safeland_round2.sh  batch_eval_marsim_safeland_round3.sh  batch_eval_marsim_safeland_round4.sh  batch_eval_online_10trials.sh  batch_eval_real_10trials.sh  make_marsim_offline_config.sh  online_land_cmd.py  online_takeoff_hover.py  real_test_maps.txt  run_marsim_safeland_offline.sh  simulate_10_trials.py  summarize_round2.py  summarize_round3.py  summarize_round4.py  visualize_complex_terrain.py  visualize_real_results.py  visualize_results.py
tools/marsim_benchmark_results/: complex_terrain_10trials.csv  online_10trials_results.csv  real_10trials_results.csv  simulated_trials.csv
tools/marsim_benchmark_results/figures/: report.html
tools/marsim_benchmark_results/figures_complex/: report_complex.html
tools/marsim_benchmark_results/figures_online/: report_real.html
tools/marsim_benchmark_results/figures_real/: report_real.html
(+17 files in other folders)
