<?xml version="1.0"?>
<package format="2">
  <name>safeland</name>
  <version>0.0.1</version>
  <description>Safe landing zone detection for UAVs based on 2.5D grid map terrain analysis.</description>

  <maintainer email="tiam@example.com">tiam</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>

  <exec_depend>grid_map_visualization</exec_depend>
  <exec_depend>rviz</exec_depend>
</package>
